architechture in place